[project]
name = "assistant-budget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.40.0",
    "xlrd>=2.0.2",
]
